@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.2.4" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.2.5" provider-name="Twilight0">
     <requires>
-        <import addon="xbmc.python" version="2.24.0"/>
-        <import addon="script.module.tulip" version="2.7.1" />
+        <import addon="xbmc.addon" version="16.1.000"/>
+        <import addon="script.module.tulip" version="2.8.1" />
     </requires>
     <extension point="xbmc.subtitle.module" library="service.py">
     </extension>
@@ -17,7 +17,10 @@
         <license>GPL-3.0-only</license>
         <website>http://www.subtitles.gr/</website>
         <platform>all</platform>
-        <news>[B]3.2.4[/B]
+        <news>[B]3.2.5[/B]
+- Tweaked imports
+
+[B]3.2.4[/B]
 - More bug fixes for vipsubs.gr (failure to load nested zip on Android)
 - Removed builtin methods from other provides
 
