@@ -1,3 +1,6 @@
+[B]3.2.5[/B]
+- Tweaked imports
+
 [B]3.2.4[/B]
 - More bug fixes for vipsubs.gr (failure to load nested zip on Android)
 - Removed builtin methods from other provides
